--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
     <!-- ===============================================-->
     <!--    Stylesheets-->
     <!-- ===============================================-->
-    <link href="./assets/lib/prismjs/prism.css" rel="stylesheet">
-    <link href="./assets/lib/loaders.css/loaders.min.css" rel="stylesheet">
+    <link href="./assets/css/prism.css" rel="stylesheet">
+    <link href="./assets/css/loaders.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-    <link href="./assets/lib/remodal/remodal.css" rel="stylesheet">
-    <link href="./assets/lib/remodal/remodal-default-theme.css" rel="stylesheet">
-    <link href="./assets/lib/owl.carousel/owl.carousel.css" rel="stylesheet">
-    <link href="./assets/lib/lightbox2/css/lightbox.css" rel="stylesheet">
-    <link href="./assets/lib/semantic-ui-accordion/accordion.min.css" rel="stylesheet">
-    <link href="./assets/lib/semantic-ui-transition/transition.min.css" rel="stylesheet">
+    <link href="./assets/css/remodal.css" rel="stylesheet">
+    <link href="./assets/css/remodal-default-theme.css" rel="stylesheet">
+    <link href="./assets/css/owl.carousel.css" rel="stylesheet">
+    <link href="./assets/css/lightbox.css" rel="stylesheet">
+    <link href="./assets/css/accordion.min.css" rel="stylesheet">
+    <link href="./assets/css/transition.min.css" rel="stylesheet">
     <link href="./assets/css/theme.css" rel="stylesheet">
   </head>
 
@@ -47,6 +47,9 @@
 
       <!-- ============================================-->
       <!-- Preloader ==================================-->
+      <div id="preloader">
+        <div class="loader"><span></span><span></span><span></span><span></span></div>
+      </div>
       <!-- ============================================-->
       <!-- End of Preloader ===========================-->
 
@@ -932,21 +935,20 @@
     <script src="./assets/js/popper.min.js"></script>
     <script src="./assets/js/bootstrap.js"></script>
     <script src="./assets/js/plugins.js"></script>
-    <script src="./assets/lib/prismjs/prism.js"></script>
-    <script src="./assets/lib/loaders.css/loaders.css.js"></script>
+    <script src="./assets/js/prism.js"></script>
+    <script src="./assets/js/loaders.css.js"></script>
     <script src="./assets/js/stickyfill.min.js"></script>
-    <script src="./assets/lib/remodal/remodal.js"></script>
-    <script src="./assets/lib/jtap/jquery.tap.js"></script>
+    <script src="./assets/js/remodal.js"></script>
+    <script src="./assets/js/jquery.tap.js"></script>
     <script src="https://www.google.com/recaptcha/api.js"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=es6,Array.prototype.includes,CustomEvent,Object.entries,Object.values,URL"></script>
-    <script src="./assets/lib/owl.carousel/owl.carousel.js"></script>
-    <script src="./assets/lib/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="./assets/lib/isotope-packery/packery-mode.pkgd.min.js"></script>
+    <script src="./assets/js/owl.carousel.js"></script>
+    <script src="./assets/js/isotope.pkgd.min.js"></script>
+    <script src="./assets/js/packery-mode.pkgd.min.js"></script>
     <script src="./assets/lib/lightbox2/js/lightbox.js"></script>
-    <script src="./assets/lib/semantic-ui-accordion/accordion.min.js"></script>
-    <script src="./assets/lib/semantic-ui-transition/transition.min.js"></script>
+    <script src="./assets/js/accordion.min.js"></script>
+    <script src="./assets/js/transition.min.js"></script>
     <script src="./assets/js/theme.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARdVcREeBK44lIWnv5-iPijKqvlSAVwbw&callback=initMap" async></script>
   </body>
 
 </html>
