--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@
     <script src="./assets/js/owl.carousel.js"></script>
     <script src="./assets/js/isotope.pkgd.min.js"></script>
     <script src="./assets/js/packery-mode.pkgd.min.js"></script>
-    <script src="./assets/lib/lightbox2/js/lightbox.js"></script>
+    <script src="./assets/js/lightbox.js"></script>
     <script src="./assets/js/accordion.min.js"></script>
     <script src="./assets/js/transition.min.js"></script>
     <script src="./assets/js/theme.js"></script>
